feat: Add api t add or remove event schedule
